# traffic-sign-detection

./: .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierrc.json  AUTHORS.md  README.md  SECURITY.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.bat  run.mjs  workspace.json
.devcontainer/: devcontainer.json
app/: .eslintrc  .prettierignore  app.js  package-lock.json  package.json
app/routes/: imageRouter.js  index.js  modelRouter.js
app/services/: multer.js
app/socket/: client.js  server.js  socket.js
app/utils/: zip.js
app/views/: home.hbs  upload-image.hbs
apps/api/: .eslintrc.json  .lintstagedrc.js  project.json  tsconfig.app.json
apps/api/src/: app.js
apps/api/src/constants/: constants.js
apps/api/src/routes/: index.js
apps/api/src/services/: multer.js
apps/api/src/socket/: client.js  server.js
apps/api/src/utils/: zip.js
apps/shared/: project.json
apps/webapp/: .eslintrc.json  .lintstagedrc.js  project.json  tsconfig.json  vite.config.js
apps/webapp/src/components/elements/: StepProgress.jsx
apps/webapp/src/components/elements/ImagePreview/: ImageActionMenu.jsx  ImageMenu.jsx  ImagePreview.jsx  ImageResizer.jsx
apps/webapp/src/components/layouts/: AppShell.jsx  Footer.jsx  Header.jsx
apps/webapp/src/components/modules/: DownloadMenu.jsx  Faq.jsx  Footer.jsx  Header.jsx  SubmitForm.jsx
apps/webapp/src/constants/: constants.js
apps/webapp/src/pages/: 404.jsx  error.jsx  index.jsx
apps/webapp/src/routes/: CustomRoute.jsx
apps/webapp/src/socket/: socket.js
apps/webapp/src/store/slice/: stepperSlice.js
apps/webapp/src/utils/: fetchImage.js
apps/yolo/: .lintstagedrc.js  project.json
apps/yolo/src/: app.py  constants.py  script.py
apps/yolo/src/constants/: constants.py
libs/shared/assets/: project.json
training/: README.md  YOLOv5_traffic.ipynb
training/others/: YOLOv5_anatomy.ipynb  YOLOv5_hand_gesture.ipynb
web/: index.html  package.json
web/src/: main.jsx
web/src/components/elements/: ImagePreview.jsx
web/src/components/elements/ImagePreview/: ImageActionMenu.jsx  ImageMenu.jsx  ImagePreview.jsx  ImageResizer.jsx
web/src/components/modules/: DownloadMenu.jsx  Faq.jsx  Footer.jsx  Header.jsx  SubmitForm.jsx
web/src/pages/: index.jsx
web/src/pages/api/auth/: index.js
web/src/routes/: CustomRoute.jsx
web/src/socket/: socket.js
web/src/store/: store.js
web/src/store/slice/: stepperSlice.js
web/src/utils/: fetchImage.js
yolo/: app.py  client.py  pyproject.toml  requirements.txt  run.py  script.py  server.py  yolo.py
