[tool.poetry]
name = "traffic-sign-detection"
version = "0.0.1"
description = "A website to detect traffic signs"
authors = ["Duong Vinh <tienvinh.duong4@gmail.com>"]

[tool.poe.tasks]
dev = "python run.py"
lint = "flake8"
"sort_import" = "isort ."
pretty = "black ."

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
environs = "^9.5.0"
python-socketio = "^5.7.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
scipy = "^1.9.1"
yolov5 = "^6.1.8"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.dev-dependencies]
poethepoet = "^0.16.0"
black = {version = "^22.6.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
